--- a/page3.html
+++ b/page3.html
@@ -21,9 +21,11 @@
                 <option value="ophthalmology">ophthalmology</option>
             </select>
             <button onclick="sortOptions()">Sort Options</button>
+            <p id="result"></p>
             <script src='sort.js'></script>
 
-            <!--<select id="hospitalOptions" name="help">-->
+            
+            <select>
             <option value="Sunrise Hospital, Ernakulam">Sunrise Hospital, Ernakulam</option>
             <option value="Corporative Hospital, Ernakulam">Corporative Hospital, Ernakulam</option>
             <option value="Ernakulam Medical Centre, Ernakulam">Ernakulam Medical Centre, Ernakulam</option>
@@ -38,7 +40,7 @@
             <option value="Elite  Hospital, Thrissur">Elite  Hospital, Thrissur</option>
             <option value="WestFort Hospital, Thrissur">WestFort Hospital, Thrissur</option>
             <option value="Mother Hospital, Thrissur">Mother Hospital, Thrissur</option>
-        <!--</select>-->
+    </select>
     </div>
     
 </body>
