Edited page3.html to fit page3.css and page3.js

--- a/page3.html
+++ b/page3.html
@@ -3,8 +3,8 @@
 <head>
     <title>HOSPITAL</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='spec.css'>
-    <script src='sort.js'></script>
+    <link rel='stylesheet' type='text/css' media='screen' href='page3.css'>
+    <script src='page3.js'></script>
 </head>
 <body>
     <div class="hospital">
@@ -23,7 +23,7 @@
             </select>
             <button id="check" onclick="sortOptions()">Check Hospitals</button>
             <p id="result"></p>
-            <script src='sort.js'></script>
+            <script src='page3.js'></script>
 
             <h2>Hospital Checklist</h2>
             <select>
