--- a/records.html
+++ b/records.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>Records</title>
-    <link rel="stylesheet" href="Records.css">
+    <link rel="stylesheet" href="records.css">
 </head>
 <body>
     <div class="container">
